# IncludeFilter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  Readme.md  out.txt
.github/workflows/: cmake.yml
fuzzing/: CMakeLists.txt  clang.cpp  msvc.cpp
src/: CMakeLists.txt  ModelIndexIterator.h  ParseIncludes.cpp  ParseIncludes.h  ParseIncludes_Testing.h  main.cpp  rc.qrc
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  ModelIndexIterator_Tests.h  ParseIncludes_Tests.cpp  ParseIncludes_Tests.h  main.cpp
tests/test_data/: includes_ninja_clang.txt  partial.txt  show_includes_msvc.txt
